--- a/07_agenda_contactos.html
+++ b/07_agenda_contactos.html
@@ -3,145 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gestión de Notas</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f9;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-
-        .container {
-            text-align: center;
-            background: #ffffff;
-            padding: 20px 40px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        }
-
-        .personal {
-            color: #007bff;
-            font-size: 20px;
-            font-style: italic;
-            margin-bottom: 20px;
-        }
-
-        input {
-            width: 80%;
-            padding: 12px;
-            font-size: 16px;
-            border: 1px solid #ccc;
-            border-radius: 8px;
-            margin-bottom: 20px;
-        }
-
-        button {
-            background-color: #007bff;
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            font-size: 16px;
-            border-radius: 5px;
-            cursor: pointer;
-            margin: 5px;
-        }
-
-        button:hover {
-            background-color: #0056b3;
-        }
-
-        #result {
-            margin-top: 20px;
-            font-size: 18px;
-            color: #333;
-        }
-    </style>
+    <title>Document</title>
 </head>
 <body>
-    <div class="container">
-        <h1 class="personal">Gestión de Notas</h1>
-        <input type="text" id="nota" placeholder="Introduce una nueva nota (0-10)">
-        <br>
-        <button onclick="nuevaNota();">Añadir Nota</button>
-        <br><br>
-        <button onclick="totalAprobados();">Aprobados</button>
-        <button onclick="calcularMedia();">Nota Media</button>
-        <button onclick="notaAlta();">Nota Más Alta</button>
-        <button onclick="notaBaja();">Nota Más Baja</button>
-        <br>
-        <button onclick="borrarNotas();">Resetear notas</button>
-        <div id="result"></div>
+    Introduce nombre:<input type="text" id="nombre"><button onclick="guardar();">Guardar</button>
+    <br><br>
+    <button onclick="mostrar();">Mostrar</button>
+    <div id="listaNombres">
+
     </div>
+
     <script>
-        //array con las notas
-        let notas = [7, 5, 2, 4, 9, 6, 1, 3, 4, 8, 7, 6];
-
-        function totalAprobados() {
-            let totalAprobados = 0;
-            for (let n of notas) {
-                if (n >= 5) {
-                    totalAprobados++;
-                }
-            }
-            document.getElementById("result").innerText = "Total aprobados: " + totalAprobados;
+        //array donde guardamos los nombres
+        let nombres=[];
+        function guardar(){
+            let n=document.getElementById("nombre").value;
+            nombres.push(n);
+            alert("Contacto guardado");
         }
-
-        function calcularMedia() {
-            let media = 0;
-            for (let n of notas) {
-                media += n;
+        function mostrar(){
+            let html="";
+            for(let n of nombres){
+                html=html+"<b>"+n+"</b><br>";
             }
-            media = media / notas.length;
-            document.getElementById("result").innerHTML = "La media es: " + media.toFixed(2);
-        }
-
-        function notaAlta() {
-            if(notas.length>0){
-                let max = notas[0];
-                for(let n of notas){
-                    if(n>max){
-                        max=n;
-                    }
-                }
-                document.getElementById("result").innerHTML = "La nota más alta es: " + max;
-            }else{
-                document.getElementById("result").innerHTML ="<b>No hay notas!!!</b>";
-            }
-            
-        }
-
-        function notaBaja() {
-            if(notas.length>0){
-                let min =notas[0];
-                for(let n of notas){
-                    if(n<min){
-                        min=n;
-                    }
-                }
-                document.getElementById("result").innerHTML = "La nota más baja es: " + min;
-            }else{
-                document.getElementById("result").innerHTML ="<b>No hay notas!!!</b>";
-            }
-        }
-
-        function nuevaNota() {
-            let nota = document.getElementById("nota").value;
-            if (nota >= 0 && nota <= 10) {
-                notas.push(parseFloat(nota));
-                document.getElementById("result").innerText = "Nota añadida correctamente.";
-                document.getElementById("nota").value = "";
-            } else {
-                alert("Nota no válida. Introduce un valor entre 0 y 10.");
-            }
-        }
-        function borrarNotas(){
-            notas=[];
+            document.getElementById("listaNombres").innerHTML=html;
         }
     </script>
 </body>
-</html>
+</html> 
